@@ -1,29 +1,29 @@
 package tacs.eventos.service;
 
+import lombok.AllArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import tacs.eventos.model.Evento;
-import tacs.eventos.model.InscripcionEvento;
 import tacs.eventos.model.RolUsuario;
 import tacs.eventos.model.Usuario;
+import tacs.eventos.model.inscripcion.InscripcionEvento;
+import tacs.eventos.repository.WaitlistRepository;
 import tacs.eventos.repository.inscripcion.InscripcionesRepository;
 import tacs.eventos.repository.usuario.UsuarioRepository;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
+@AllArgsConstructor
 public class UsuarioService {
     private final UsuarioRepository repo;
     private final InscripcionesRepository inscripcionesRepository;
+    private final WaitlistRepository waitlistRepository;
     private final PasswordEncoder encoder;
-
-    public UsuarioService(UsuarioRepository repo, InscripcionesRepository repoInscripciones, PasswordEncoder encoder) {
-        this.repo = repo;
-        this.inscripcionesRepository = repoInscripciones;
-        this.encoder = encoder;
-    }
 
     public Usuario registrar(String email, String password) {
         Optional<Usuario> existente = repo.obtenerPorEmail(email);
@@ -39,7 +39,13 @@ public class UsuarioService {
     }
 
     public List<Evento> obtenerInscripciones(String usuarioId) {
-        List<InscripcionEvento> inscripciones = inscripcionesRepository.getInscripcionesPorParticipante(usuarioId);
-        return inscripciones.stream().map(InscripcionEvento::getEvento).toList();
+        Usuario usuario = repo.obtenerPorId(usuarioId)
+                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
+        List<InscripcionEvento> inscripciones = inscripcionesRepository.getInscripcionesPorParticipante(usuario);
+        List<Evento> eventosConInscripcionConfirmada = inscripciones.stream().map(InscripcionEvento::getEvento)
+                .collect(Collectors.toList());
+        List<Evento> eventosEnWaitlist = waitlistRepository.eventosEnCuyasWaitlistEsta(usuario);
+        return Stream.concat(eventosEnWaitlist.stream(), eventosConInscripcionConfirmada.stream())
+                .collect(Collectors.toList());
     }
 }
